crates/science-parser/tests/snapshots/parse_closure_types__a_question_mark_binds_tighter_than_the_arrow.snap
---
source: crates/science-parser/tests/parse_closure_types.rs
assertion_line: 90
expression: "shape_of_type(\"(Int) -> Bool?\")"
---
Closure
  params
    Path `Int`
  ret: Nullable
    Path `Bool`
