crates/science-parser/tests/snapshots/parse_closure_types__a_super_interface_list_still_requires_names.snap
---
source: crates/science-parser/tests/parse_closure_types.rs
expression: "parse_source_allowing_errors(r#\"interface Pretty: (Int) -> Bool:\n    def pretty(self) -> Int\n\"#)"
---
Module @0..61
  Interface `Pretty` @0..17
  Fn `main` @19..22
    ret: Nullable @22..22
      Path `Error` @22..22
    body: Block @19..22
      Path `Int` @19..22
      tail: Null @22..22
--- diagnostics ---
SC0102 @18..19 expected an identifier, found `(`
SC0100 @18..19 expected `:`, found `(`
SC0100 @24..26 expected end of line, found `->`
