crates/science-parser/tests/snapshots/parse_closure_types__a_two_parameter_closure.snap
---
source: crates/science-parser/tests/parse_closure_types.rs
expression: "shape_of_type(\"(F64, Row) -> F64\")"
---
Closure
  params
    Path `F64`
    Path `Row`
  ret: Path `F64`
