crates/science-parser/tests/snapshots/parse_closure_types__an_array_of_closures_is_spelled_with_its_own_parentheses.snap
---
source: crates/science-parser/tests/parse_closure_types.rs
assertion_line: 131
expression: "shape_of_type(\"Array of ((Int) -> Bool)\")"
---
Path `Array`
  generics of `Array`
    Closure
      params
        Path `Int`
      ret: Path `Bool`
