crates/science-parser/tests/snapshots/parse_closure_types__an_empty_parameter_list_is_not_a_bound.snap
---
source: crates/science-parser/tests/parse_closure_types.rs
assertion_line: 301
expression: "parse_source_allowing_errors(r#\"def run of F(f: F) -> Int where F: ():\n    0\n\"#)"
---
Module @0..45
  Fn `run` @0..44
    generics
      TypeParam `F` @11..12
    params
      Param `f` @13..17
        type: Path `F` @16..17
    ret: Path `Int` @22..25
    where
      Predicate @32..37
        type: Path `F` @32..33
        bounds
          ClosureBound @35..37
            ret: Error @35..37
    body: Block @43..44
      tail: Int 0 @43..44
--- diagnostics ---
SC0119 @35..37 expected `->` after a closure type's parameter list, found `:`
  note `collections-and-chains.md` §1.2 spells a closure type `(A) -> B`; a bound that opens with `(` has no other reading, so the arrow is not optional here
