crates/science-parser/tests/snapshots/parse_closure_types__an_unclosed_parameter_list_does_not_eat_the_next_item.snap
---
source: crates/science-parser/tests/parse_closure_types.rs
expression: "parse_source_allowing_errors(r#\"def f(g: (Int -> Bool) -> Int:\n    0\n\ndef h() -> Int:\n    0\n\"#)"
---
Module @0..60
  Fn `f` @0..36
    params
      Param `g` @6..29
        type: Closure @9..29
          params
            Closure @10..21
              params
                Path `Int` @10..13
              ret: Path `Bool` @17..21
          ret: Path `Int` @26..29
    body: Block @35..36
      tail: Int 0 @35..36
  Fn `h` @38..59
    ret: Path `Int` @49..52
    body: Block @58..59
      tail: Int 0 @58..59
--- diagnostics ---
SC0100 @29..30 expected `)`, found `:`
