crates/science-parser/tests/snapshots/parse_closure_types__an_unparenthesised_left_hand_side_is_one_parameter.snap
---
source: crates/science-parser/tests/parse_closure_types.rs
expression: "parse_source(r#\"def run[F](f: F) -> Int where F: Int -> Bool:\n    0\n\"#)"
---
Module @0..52
  Fn `run` @0..51
    generics
      TypeParam `F` @8..9
    params
      Param `f` @11..15
        type: Path `F` @14..15
    ret: Path `Int` @20..23
    where
      Predicate @30..44
        type: Path `F` @30..31
        bounds
          ClosureBound @33..44
            params
              Path `Int` @33..36
            ret: Path `Bool` @40..44
    body: Block @50..51
      tail: Int 0 @50..51
--- diagnostics ---
(none)
