crates/science-parser/tests/snapshots/parse_closure_types__generic_arguments_bind_tighter_than_the_arrow.snap
---
source: crates/science-parser/tests/parse_closure_types.rs
expression: "shape_of_type(\"Array[Int] -> Bool\")"
---
Closure
  params
    Path `Array`
      generics of `Array`
        Path `Int`
  ret: Path `Bool`
