crates/science-parser/tests/snapshots/parse_closure_types__implements_still_requires_an_interface_name.snap
---
source: crates/science-parser/tests/parse_closure_types.rs
expression: "parse_source_allowing_errors(r#\"Doc implements (Int) -> Bool:\n    def f(self) -> Int:\n        0\n\"#)"
---
Module @0..64
--- diagnostics ---
SC0111 @15..16 expected an interface name after `implements`, found `(`
