crates/science-parser/tests/snapshots/parse_closure_types__the_arrow_is_right_associative.snap
---
source: crates/science-parser/tests/parse_closure_types.rs
assertion_line: 67
expression: "shape_of_type(\"(Int) -> (Bool) -> String\")"
---
Closure
  params
    Path `Int`
  ret: Closure
    params
      Path `Bool`
    ret: Path `String`
